--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -7,35 +7,15 @@ header {
 	text-align: center;
 	gap: 0.75rem;
 
-	h1 {
-		font-size: 3rem;
-	}
-	h2 {
-		font-size: 1.5rem;
-	}
-	h3 {
-		font-size: 1rem;
-        font-weight: normal;
-	}
-
 	/** smaller desktops */
 	@media only screen and (min-width: 992px) {
 		align-items: start;
 		text-align: left;
-		h1 {
-			font-size: 5rem;
-		}
-		h2 {
-			font-size: 2rem;
-		}
-		h3 {
-			font-size: 1.2rem;
-		}
 	}
 }
 
 #portrait {
-	background-image: url("portrait.jpg");
+	background-image: url("./src/assets/portrait.jpg");
 	border-radius: 60px;
 	width: 120px;
 	height: 120px;
